erDiagram
    %% ── Translation domain ────────────────────────────────────────────────
    Project {
        uuid id
        string name
        string slug
        uuid storage_connection_id
    }
    Locale {
        uuid id
        uuid project_id
        string code
        boolean is_source
    }
    Namespace {
        uuid id
        uuid project_id
        string name
    }
    TranslationKey {
        uuid id
        uuid project_id
        uuid namespace_id
        string key
        text context
    }
    Translation {
        uuid id
        uuid project_id
        uuid translation_key_id
        uuid locale_id
        text value
        uuid author_id
    }
    TranslationPublication {
        uuid id
        uuid translation_id
        uuid publisher_id
    }
    TranslationReview {
        uuid id
        uuid translation_id
        uuid requester_id
    }
    TranslationApproval {
        uuid id
        uuid translation_id
        uuid approver_id
    }
    TranslationVersion {
        uuid id
        uuid translation_id
        text value
        uuid author_id
    }
    TranslationArtifact {
        uuid id
        uuid project_id
        uuid namespace_id
        uuid locale_id
        string checksum
        string content_encoding
    }
    TranslationProposal {
        uuid id
        uuid project_id
        uuid namespace_id
        uuid locale_id
        uuid author_id
        string key
        text value
        string session
    }

    %% ── Access / auth ─────────────────────────────────────────────────────
    User {
        uuid id
        string email
        string name
        string role
    }
    ApiToken {
        uuid id
        uuid project_id
        uuid creator_id
        string name
        string scope
        string token_digest
    }
    PersonalAccessToken {
        uuid id
        uuid user_id
        string name
        string token_digest
    }
    CliAuthCode {
        uuid id
        uuid user_id
        string code_digest
        string name
        datetime expires_at
        datetime used_at
    }
    Session {
        uuid id
        uuid user_id
        string user_agent
        string ip_address
    }
    SignInToken {
        uuid id
        uuid user_id
        string token
        datetime expires_at
    }
    Invitation {
        uuid id
        uuid inviter_id
        string email
        string role
        string token
        datetime accepted_at
    }

    %% ── Support / infra ───────────────────────────────────────────────────
    StorageConnection {
        uuid id
        string service
        string name
        string bucket
        boolean is_default
    }
    MissingKeyReport {
        uuid id
        uuid project_id
        string namespace
        string key
        jsonb locales
        integer hits
    }
    ProjectBackup {
        uuid id
        uuid project_id
        string format
    }
    Event {
        uuid id
        string eventable_type
        uuid eventable_id
        uuid creator_id
        string action
    }
    Setting {
        uuid id
        integer missing_rate_limit
        integer delivery_rate_limit
        integer cli_token_limit
    }

    %% ── Translation-domain relations ──────────────────────────────────────
    Project ||--o{ Locale : "has many"
    Project ||--o{ Namespace : "has many"
    Project ||--o{ TranslationKey : "has many"
    Project ||--o{ Translation : "has many"
    Project ||--o{ TranslationArtifact : "has many"
    Project ||--o{ TranslationProposal : "has many"
    Namespace ||--o{ TranslationKey : "has many"
    Namespace ||--o{ TranslationArtifact : "has many"
    Namespace ||--o{ TranslationProposal : "staged"
    Locale ||--o{ Translation : "has many"
    Locale ||--o{ TranslationArtifact : "has many"
    Locale ||--o{ TranslationProposal : "staged"
    TranslationKey ||--o{ Translation : "has many"
    User ||--o{ TranslationProposal : "proposed"
    Translation |o--o| TranslationPublication : "state record"
    Translation |o--o| TranslationReview : "state record"
    Translation |o--o| TranslationApproval : "state record"
    Translation ||--o{ TranslationVersion : "history"
    User ||--o{ Translation : "authored"

    %% ── Access / auth relations ───────────────────────────────────────────
    Project ||--o{ ApiToken : "has many"
    User ||--o{ ApiToken : "created"
    User ||--o{ PersonalAccessToken : "owns"
    User ||--o{ CliAuthCode : "login codes"
    User ||--o{ Session : "has many"
    User ||--o{ SignInToken : "has many"
    User ||--o{ Invitation : "invited by"

    %% ── Support / infra relations ─────────────────────────────────────────
    StorageConnection ||--o{ Project : "backs"
    Project ||--o{ MissingKeyReport : "has many"
    Project ||--o{ ProjectBackup : "has many"
    User ||--o{ Event : "created"
    Event }o--|| Project : "eventable (polymorphic: Project / Translation / TranslationKey)"
